- Added Lombok (removed boilerplate code) - Implemented proper DTO layer (Request/Response) - Created service interfaces + implementations - Improved error handling with custom exceptions and @ControllerAdvice - Switched to application.yml - Cleaned up project structure